<resources>
    <string name="app_name">GetJobsApp</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="action_close">Close</string>
    <string name="empty_directory_hint">Empty directory</string>
    <string name="type_apk">APK</string>
    <string name="type_archive">Archive</string>
    <string name="type_certificate">Certificate</string>
    <string name="type_directory">Directory</string>
    <string name="type_document">File</string>
    <string name="type_drawing">Picture</string>
    <string name="type_excel">Spreadsheet</string>
    <string name="type_image">Image</string>
    <string name="type_music">Music</string>
    <string name="type_pdf">PDF document</string>
    <string name="type_power_point">Presentation</string>
    <string name="type_video">Video</string>
    <string name="type_word">Document</string>
    <string name="camera">CAMERA</string>
    <string name="done">DONE</string>
    <string name="error_create_image_file">Failed to create image file</string>
    <string name="error_no_camera">No camera found</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="image_directory">Camera</string>
    <string name="msg_empty_images">No images found</string>
    <string name="msg_limit_images">Image selection limit</string>
    <string name="msg_no_camera_permission">Please grant camera permission to capture image</string>
    <string name="msg_no_write_external_permission">Please grant storage permission to select images</string>
    <string name="ok">OK</string>
    <string name="permission_write_external_rationale">Allow access external storage to select images</string>
    <string name="selected">%d selected</string>
    <string name="selected_with_limit">%1$d/%2$d selected</string>
    <string name="title_folder">Folder</string>
    <string name="title_permission_denied">Permission denied</string>
    <string name="title_select_image">Tap to select images</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="about">About</string>
    <string name="accept">Accept</string>
    <string name="action_settings">Settings</string>
    <string name="add_job">Add Job</string>
    <string name="address">Address :-</string>
    <string name="admob_banner_id">ca-app-pub-8590177428730475~3302364426</string>
    <string name="admob_interstitial_id">ca-app-pub-8590177428730475/9478612733</string>
    <string name="already_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_now">Apply Now</string>
    <string name="author">Author</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose">Choose</string>
    <string name="city">City :-</string>
    <string name="company">Company</string>
    <string name="conne_msg1">No Network Connection!!!</string>
    <string name="conne_msg2">Please connect to working Internet connection</string>
    <string name="contact">Contact</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="default_email">apps@dev.com</string>
    <string name="delete_job_confirm">Are you sure you want to delete this job?</string>
    <string name="delete_this_job">Delete this Job</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="edit_job">Edit Job</string>
    <string name="email">Email :-</string>
    <string name="email_ab">Email</string>
    <string name="email_login">Enter Email</string>
    <string name="email_login_lbl">Email</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Enter City</string>
    <string name="exit">Exit</string>
    <string name="exit_msg">Are You Sure You Want To Quit?</string>
    <string name="favourite_add">Job has been saved</string>
    <string name="favourite_remove">Job has been removed</string>
    <string name="file_picker_app_name">MaterialFilePicker</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_choose">Choose</string>
    <string name="job_address_add">Enter Address</string>
    <string name="job_address_lbl">Address :-</string>
    <string name="job_category_lbl">Category :-</string>
    <string name="job_company_add">Enter Company Name</string>
    <string name="job_company_lbl">Company Name :-</string>
    <string name="job_date_add">Enter Date</string>
    <string name="job_date_lbl">Date :-</string>
    <string name="job_description">Job Description</string>
    <string name="job_description_add">Enter Description</string>
    <string name="login">LOG IN</string>
    <string name="menu_about">About Us</string>
    <string name="menu_category">Category</string>
    <string name="menu_favourite">Saved Jobs</string>
    <string name="menu_latest">Latest Jobs</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_share_app">Share App</string>
    <string name="no_account">"DON'T HAVE AN ACCOUNT?"</string>
    <string name="password_login">Enter Password</string>
    <string name="password_login_lbl">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="skip">Skip</string>
</resources>