<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:icon="@drawable/ic_latest" android:id="@id/menu_go_latest" android:checked="true" android:title="@string/menu_latest" />
        <item android:icon="@drawable/ic_categories" android:id="@id/menu_go_category" android:checked="false" android:title="@string/menu_category" />
        <item android:icon="@drawable/ic_latest" android:id="@id/menu_go_favourite" android:checked="false" android:title="@string/menu_favourite" />
        <item android:icon="@drawable/ic_profile" android:id="@id/menu_go_profile" android:title="@string/menu_profile" android:checkable="false" />
        <item android:icon="@drawable/ic_rate" android:id="@id/menu_go_rate" android:title="@string/menu_rate_app" android:checkable="false" />
        <item android:icon="@drawable/ic_share" android:id="@id/menu_go_share" android:title="@string/menu_share_app" android:checkable="false" />
        <item android:icon="@drawable/ic_about" android:id="@id/menu_go_about" android:title="@string/menu_about" android:checkable="false" />
        <item android:icon="@drawable/ic_privacy" android:id="@id/menu_go_privacy" android:title="@string/menu_privacy" android:checkable="false" />
        <item android:icon="@drawable/ic_logout_nav" android:id="@id/menu_go_logout" android:title="@string/menu_logout" android:checkable="false" />
    </group>
</menu>