<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="15.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_email" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_login_lbl"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_corner"
                    android:hint="@string/email_login"
                    android:inputType="textEmailAddress"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/line"
                    android:textCursorDrawable="@drawable/cursor" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_marginTop="5.0dip"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_password" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_login_lbl"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_corner"
                    android:hint="@string/password_login"
                    android:inputType="textPassword"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/line"
                    android:textCursorDrawable="@drawable/cursor" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_marginTop="5.0dip"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_log_in"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/outline_white_button"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="19.0sp" />

            <Button
                android:id="@+id/button_skip"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/white_button"
                android:text="@string/skip"
                android:textColor="@color/colorPrimary"
                android:textSize="19.0sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_forgot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/signinadView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:adSize="BANNER"
            app:adUnitId="@string/admob_banner_id" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20.0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/line" />

        <TextView
            android:id="@+id/text_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:text="@string/sign_up"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
